aligned the search bar in center with margin

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="w-25 mt-5 mx-auto d-flex justify-content-evenly align-items-center">
         <input type="text" id="id-input" placeholder="student id">
         <button id="input-button">Show Results</button>
     </div>
