added color, console cleared and other issues fixed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <div class="w-25 mt-5 mx-auto d-flex justify-content-evenly align-items-center">
-        <input type="text" id="id-input" placeholder="student id">
-        <button id="input-button">Show Results</button>
+        <input type="text" id="id-input" class="h-100 p-1 border border-success text-success font-monospace fw-light"
+            placeholder="Enter student id ...">
+        <button id="input-button" class="btn btn-danger h-25 p-1 ">Show Results</button>
     </div>
     <div class="container-fluid  bg-white my-5">
         <div id="row-container" class="text-center row row-cols-3 mx-auto justify-content-evenly">
